tests/tests_p1/fail/prof/10noid.min
program
	number v := 1
start
	x!
end
